# FlightControllerSoftware

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists_template.txt  Doxyfile  FlightController.elf  FlightController.hex  FlightController.ioc  FlightController.map  FlightController2.ioc  Makefile  README.md  Readme.md  autonomous.hpp  control.h  controllerMain.hpp  defines.hpp  flightControl.hpp  imuAdapter.hpp  install_via_pi.sh  main.c  main.cpp  main.d  mx.scratch  out_state.h  receiver.hpp  sensors.hpp  setpoint.h  state.h
.github/workflows/: build.yml  build_avr.yml  check.yml  deploy_pages.yml  doc.yml  documentation.yml  low_level_test.yml  low_level_tests.yml  static_analysis.yml  test.yml
Components/: CMakeLists.txt  remote.h
Drivers/: CMakeLists.txt  bno055.c  bno055.h  bno055_uart.c  bno055_uart.h  sbus.c  sbus.h
Inc/: adc.h  controller.h  dma.h  gpio.h  i2c.h  main.h  rc_lib.h  spi.h  statemachine.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h  usart.h
Inc/Backup/: stm32l4xx_hal_conf.h.bak  stm32l4xx_it.h.bak  tim.h.bak
Interfaces/: CMakeLists.txt  imu.c  imu.h  remote.c  remote.h
Src/: CMakeLists.txt  adc.c  controller.c  dma.c  dma.tmp  gpio.c  gpio.tmp  i2c.c  license.tmp  main.c  out_state.h  rc_lib.c  sbus.c  setpoint.h  spi.c  statemachine.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  tim.c  usart.c
Src/Application/: application.c  application.h  controller.c  controller.h  error_handler.c  error_handler.h  mode_handler.c  mode_handler.h
Src/Backup/: dma.c.bak  gpio.c.bak  system_stm32l4xx.c.bak  usart.c.bak
Src/Components/: CMakeLists.txt  actuators.c  actuators.h  flight_computer.c  flight_computer.h  flightcomputer.c  flightcomputer.h  imu.c  imu.h  remote.c  remote.h  servo_motor.c  servo_motor.h  system.c  system.h
Src/Drivers/: CMakeLists.txt  bno055.c  bno055.h  bno055_uart.c  bno055_uart.h  ppm.c  ppm.h  protobuf.c  protobuf.h  ring_buffer.c  ring_buffer.h  sbus.c  sbus.h
Src/Util/: communication.c  communication.h  controller.c  controller.h  math.c  math.h  output.c  output.h
Tests/: CMakeLists.txt
Tests/HighLevel/: test.py
Tests/HighLevel/Lib/: avr_dude.py  bno_mock.py  port_manager.py
Tests/LowLevel/: CMakeLists.txt  main.cpp
Tests/LowLevel/Application/: application.cpp  controller.cpp  error_handler.cpp  mode_handler.cpp
Tests/LowLevel/Components/: actuators.cpp  flight_computer.cpp  flightcomputer.cpp  imu.cpp  remote.cpp  servo_motor.cpp  system.cpp
Tests/LowLevel/Drivers/: bno055.cpp  bno055_uart.cpp  ppm.cpp  protobuf.cpp  ring_buffer.cpp  sbus.cpp
Tests/LowLevel/Interfaces/: imu.cpp
Tests/LowLevel/Messages/: MessageDecoding.cpp  MessageEncoding.cpp  generate_tests.sh
Tests/LowLevel/Mock/: CMakeLists.txt
Tests/LowLevel/Mock/Lib/: Base.hpp  CMakeLists.txt  FunctionInfo.hpp  Handler.hpp  Util.hpp  generate_mock.py
Tests/LowLevel/Mock/System/avr/: interrupt.h  io.h  wdt.h
Tests/LowLevel/Mock/System/util/: delay.h
Tests/LowLevel/Util/: imu_handler.cpp  input.cpp
Tests/Mock/: CMakeLists.txt
Tests/Mock/Lib/: Base.hpp  CMakeLists.txt  FunctionInfo.hpp  Handler.hpp  Util.hpp  generate_mock.py
Tests/Mock/System/util/: delay.c
Util/: communication.c  communication.h  controller.c  controller.h  imu_handler.c  imu_handler.h  input.c  input.h  math.c  math.h  output.c  output.h
hal/: MPU9250_SPI.lib  PpmOut.cpp  PpmOut.d  PpmOut.hpp  SBus.cpp  SBus.d  SBus.hpp  bno055.cpp  bno055.d  bno055.hpp  i2cSensor.cpp  i2cSensor.d  i2cSensor.hpp  mpl3115a2.cpp  mpl3115a2.d  mpl3115a2.hpp  mpu9250Adapter.cpp  mpu9250Adapter.hpp  srf02.cpp  srf02.d  watchdog.cpp  watchdog.hpp
hal/MPU9250_SPI/: MPU9250.cpp  MPU9250.h
hal/i2c/: bno055.cpp  bno055.hpp  i2cSensor.hpp  mpl3115a2.cpp  mpl3115a2.hpp  srf02.cpp  srf02.hpp
mbed/TARGET_K64F/TARGET_Freescale/TARGET_KPSDK_MCUS/TARGET_MCU_K64F/TARGET_FRDM/: PeripheralNames.h
rc_lib/: rc_lib.h
tests/: CMakeLists.txt  main.c  testMain.hpp
